Switch to PircBotX, and clean up one or two things